--- a/auth/package.json
+++ b/auth/package.json
@@ -7,6 +7,7 @@
 		"@types/cookie-session": "^2.0.43",
 		"@types/express": "^4.17.13",
 		"@types/jsonwebtoken": "^8.5.5",
+		"@types/mongoose": "^5.11.97",
 		"cookie-session": "^2.0.0",
 		"express": "^4.17.2",
 		"express-async-errors": "^3.1.1",
@@ -21,6 +22,7 @@
 		"@types/jest": "^27.4.0",
 		"@types/supertest": "^2.0.11",
 		"jest": "^27.4.5",
+		"mongodb-memory-server": "^8.1.0",
 		"supertest": "^6.1.6",
 		"ts-jest": "^27.1.2"
 	},
