trying to fix open connections thingi 2

--- a/auth/package.json
+++ b/auth/package.json
@@ -28,7 +28,7 @@
 	"scripts": {
 		"start": "ts-node-dev src/index.ts",
 		"test": "jest --watchAll --no-cache",
-		"test:ci": "jest --detectOpenHandles --forceExit"
+		"test:ci": "jest --forceExit"
 	},
 	"jest": {
 		"preset": "ts-jest",
