added basic product healthcheck

--- a/infra/k8s/ingress-svc.yml
+++ b/infra/k8s/ingress-svc.yml
@@ -24,6 +24,13 @@ spec:
                 name: auth-srv
                 port:
                   number: 3000
+          - path: /api/product/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: product-srv
+                port:
+                  number: 3000
           # - path: /api/tickets/?(.*)
           #   backend:
           #     serviceName: tickets-srv
