--- a/skaffold.yml
+++ b/skaffold.yml
@@ -18,3 +18,11 @@ build:
         manual:
           - dest: . 
             src:  'src/**/*.ts'
+    - image: adihaimsohn/toppicks-product
+      context: product
+      docker:
+        dockerfile: Dockerfile 
+      sync:
+        manual:
+          - dest: . 
+            src:  'src/**/*.ts'
