--- a/infra/k8s/ingress-svc.yml
+++ b/infra/k8s/ingress-svc.yml
@@ -24,11 +24,11 @@ spec:
                 name: auth-srv
                 port:
                   number: 3000
-          - path: /api/product/?(.*)
+          - path: /api/products/?(.*)
             pathType: Prefix
             backend:
               service:
-                name: product-srv
+                name: products-srv
                 port:
                   number: 3000
           # - path: /api/tickets/?(.*)
