added base of brands service

--- a/infra/k8s/ingress-svc.yml
+++ b/infra/k8s/ingress-svc.yml
@@ -31,6 +31,13 @@ spec:
                 name: products-srv
                 port:
                   number: 3000
+          - path: /api/brands/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: brands-srv
+                port:
+                  number: 3000
           # - path: /api/tickets/?(.*)
           #   backend:
           #     serviceName: tickets-srv
