--- a/skaffold.yml
+++ b/skaffold.yml
@@ -26,3 +26,11 @@ build:
         manual:
           - dest: . 
             src:  'src/**/*.ts'
+    - image: adihaimsohn/toppicks-brands
+      context: brands
+      docker:
+        dockerfile: Dockerfile 
+      sync:
+        manual:
+          - dest: . 
+            src:  'src/**/*.ts'
