--- a/skaffold.yml
+++ b/skaffold.yml
@@ -19,7 +19,7 @@ build:
           - dest: . 
             src:  'src/**/*.ts'
     - image: adihaimsohn/toppicks-products
-      context: product
+      context: products
       docker:
         dockerfile: Dockerfile 
       sync:
