--- a/infra/k8s/product-dep.yml
+++ b/infra/k8s/product-dep.yml
@@ -18,6 +18,15 @@ spec:
         ports:
           - containerPort: 3000
         env: 
+          - name: NATS_CLIENT_ID
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
+          - name: NATS_URL
+            value: 'http://nats-srv:4222'
+          - name: NATS_CLUSTER_ID
+            value: toppicks
+
           - name: MONGO_URI
             value: 'mongodb://products-mongo-srv:27017/products'
           # - name: JWT_KEY
