--- a/infra/k8s/nats-dep.yml
+++ b/infra/k8s/nats-dep.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nats-dep
+  namespace: adi-dev
 spec:
   selector:
     matchLabels:
@@ -22,7 +23,7 @@ spec:
           '-hbf', '2', 
           '-SD',
           '-cid', 
-          'ticketing'
+          'toppicks'
         ]
 
 --- 
@@ -31,6 +32,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nats-srv
+  namespace: adi-dev
 spec:
   selector:
     app: nats
