--- a/skaffold.yml
+++ b/skaffold.yml
@@ -34,3 +34,11 @@ build:
         manual:
           - dest: . 
             src:  'src/**/*.ts'
+    - image: adihaimsohn/toppicks-user-ratings
+      context: user-ratings
+      docker:
+        dockerfile: Dockerfile 
+      sync:
+        manual:
+          - dest: . 
+            src:  'src/**/*.ts'
