started adding user-rating new rating route

--- a/infra/k8s/ingress-svc.yml
+++ b/infra/k8s/ingress-svc.yml
@@ -38,7 +38,7 @@ spec:
                 name: brands-srv
                 port:
                   number: 3000
-          - path: /api/brands/?(.*)
+          - path: /api/user-ratings/?(.*)
             pathType: Prefix
             backend:
               service:
