--- a/products/package.json
+++ b/products/package.json
@@ -11,7 +11,9 @@
 	"jest": {
 		"preset": "ts-jest",
 		"testEnvironment": "node",
-		"setupFilesAfterEnv": [ "./src/test/setup.ts" ]
+		"setupFilesAfterEnv": [
+			"./src/test/setup.ts"
+		]
 	},
 	"author": "",
 	"license": "ISC",
@@ -24,7 +26,8 @@
 		"express-async-errors": "^3.1.1",
 		"express-validator": "^6.12.2",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^6.1.7",
+		"@types/mongoose": "^5.10.5",
+		"mongoose": "^5.10.19",
 		"node-nats-streaming": "^0.3.2",
 		"ts-node-dev": "^1.1.8",
 		"typescript": "^4.5.5"
