--- a/user-ratings/package.json
+++ b/user-ratings/package.json
@@ -21,12 +21,13 @@
 		"@types/cookie-session": "^2.0.43",
 		"@types/express": "^4.17.13",
 		"@types/jsonwebtoken": "^8.5.8",
+		"@types/mongoose": "^5.10.5",
+		"mongoose": "^5.10.19",
 		"cookie-session": "^2.0.0",
 		"express": "^4.17.2",
 		"express-async-errors": "^3.1.1",
 		"express-validator": "^6.12.2",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^6.1.7",
 		"node-nats-streaming": "^0.3.2",
 		"ts-node-dev": "^1.1.8",
 		"typescript": "^4.5.5"
