--- a/infra/k8s/ingress-svc.yml
+++ b/infra/k8s/ingress-svc.yml
@@ -45,6 +45,13 @@ spec:
                 name: user-ratings-srv
                 port:
                   number: 3000
+          - path: /?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: client-srv
+                port:
+                  number: 3000
           # - path: /api/tickets/?(.*)
           #   backend:
           #     serviceName: tickets-srv
