--- a/skaffold.yml
+++ b/skaffold.yml
@@ -42,3 +42,11 @@ build:
         manual:
           - dest: . 
             src:  'src/**/*.ts'
+    - image: adihaimsohn/toppicks-client
+      context: client
+      docker:
+        dockerfile: Dockerfile 
+      sync:
+        manual:
+          - dest: . 
+            src:  'src/**/*.js'
