--- a/user-ratings/package.json
+++ b/user-ratings/package.json
@@ -11,9 +11,7 @@
 	"jest": {
 		"preset": "ts-jest",
 		"testEnvironment": "node",
-		"setupFilesAfterEnv": [
-			"./src/test/setup.ts"
-		]
+		"setupFilesAfterEnv": [ "./src/test/setup.ts" ]
 	},
 	"author": "",
 	"license": "ISC",
@@ -21,8 +19,7 @@
 		"@types/cookie-session": "^2.0.43",
 		"@types/express": "^4.17.13",
 		"@types/jsonwebtoken": "^8.5.8",
-		"@types/mongoose": "^5.10.5",
-		"mongoose": "^5.10.19",
+		"mongoose": "^6.1.7",
 		"cookie-session": "^2.0.0",
 		"express": "^4.17.2",
 		"express-async-errors": "^3.1.1",
