--- a/auth/package.json
+++ b/auth/package.json
@@ -5,9 +5,11 @@
 	"main": "index.js",
 	"dependencies": {
 		"@types/cookie-session": "^2.0.43",
+		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/jsonwebtoken": "^8.5.8",
 		"cookie-session": "^2.0.0",
+		"cors": "^2.8.5",
 		"express": "^4.17.2",
 		"express-async-errors": "^3.1.1",
 		"express-validator": "^6.12.2",
@@ -34,7 +36,9 @@
 	"jest": {
 		"preset": "ts-jest",
 		"testEnvironment": "node",
-		"setupFilesAfterEnv": [ "./src/test/setup.ts" ]
+		"setupFilesAfterEnv": [
+			"./src/test/setup.ts"
+		]
 	},
 	"author": "",
 	"license": "ISC"
