--- a/products/package.json
+++ b/products/package.json
@@ -11,9 +11,7 @@
 	"jest": {
 		"preset": "ts-jest",
 		"testEnvironment": "node",
-		"setupFilesAfterEnv": [
-			"./src/test/setup.ts"
-		]
+		"setupFilesAfterEnv": [ "./src/test/setup.ts" ]
 	},
 	"author": "",
 	"license": "ISC",
@@ -26,6 +24,7 @@
 		"express": "^4.17.2",
 		"express-async-errors": "^3.1.1",
 		"express-validator": "^6.12.2",
+		"file-type": "^16.5.3",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.1.7",
 		"multer": "^1.4.4",
