--- a/.github/workflows/tests-products.yml
+++ b/.github/workflows/tests-products.yml
@@ -10,4 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: cd products && npm install && npm run test:ci
+      - run: node -v && cd products && npm install && npm run test:ci
