--- a/.github/workflows/tests-products.yml
+++ b/.github/workflows/tests-products.yml
@@ -8,9 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [17.x]
+    # strategy:
+    #   matrix:
+    #     node-version: [17.x]
     steps:
       - uses: actions/checkout@v2
       - run: node -v && cd products && npm install && npm run test:ci
