--- a/products/package.json
+++ b/products/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"start": "ts-node-dev src/index.ts",
 		"test": "jest --watchAll --no-cache",
-		"test:ci": "jest --forceExit --maxWorkers=2"
+		"test:ci": "jest --forceExit --verbose"
 	},
 	"jest": {
 		"preset": "ts-jest",
