--- a/.github/workflows/tests-products.yml
+++ b/.github/workflows/tests-products.yml
@@ -13,4 +13,4 @@ jobs:
     #     node-version: [17.x]
     steps:
       - uses: actions/checkout@v2
-      - run: node -v && cd products && npm install && npm run test:ci
+      - run: node -v && cd products && ls /src/__mocks__ && npm install && npm run test:ci
