--- a/.github/workflows/tests-user-ratings.yml
+++ b/.github/workflows/tests-user-ratings.yml
@@ -7,7 +7,12 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+        matrix:
+            os: [windows-latest]
+            # os: [windows-latest, ubuntu-latest, macos-latest]
     steps:
       - uses: actions/checkout@v2
       - run: cd user-ratings && npm install && npm run test:ci
