--- a/auth/package.json
+++ b/auth/package.json
@@ -16,6 +16,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.1.7",
 		"node-nats-streaming": "^0.3.2",
+		"serve": "^13.0.2",
 		"ts-node-dev": "^1.1.8",
 		"typescript": "^4.5.5"
 	},
