--- a/products/package.json
+++ b/products/package.json
@@ -20,7 +20,9 @@
 		"@types/express": "^4.17.13",
 		"@types/jsonwebtoken": "^8.5.8",
 		"@types/multer": "^1.4.7",
+		"@types/cors": "^2.8.12",
 		"cookie-session": "^2.0.0",
+		"cors": "^2.8.5",
 		"express": "^4.17.2",
 		"express-async-errors": "^3.1.1",
 		"express-validator": "^6.12.2",
