--- a/lists/package.json
+++ b/lists/package.json
@@ -4,7 +4,14 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start": "ts-node-dev src/index.ts",
+		"test": "jest --watchAll --no-cache",
+		"test:ci": "jest --forceExit"
+	},
+	"jest": {
+		"preset": "ts-jest",
+		"testEnvironment": "node",
+		"setupFilesAfterEnv": [ "./src/test/setup.ts" ]
 	},
 	"author": "",
 	"license": "ISC",
