--- a/auth/package.json
+++ b/auth/package.json
@@ -14,6 +14,7 @@
 		"express-async-errors": "^3.1.1",
 		"express-validator": "^6.12.2",
 		"jsonwebtoken": "^8.5.1",
+		"mongo-sanitize": "^1.1.0",
 		"mongoose": "^6.1.7",
 		"node-nats-streaming": "^0.3.2",
 		"serve": "^13.0.2",
@@ -23,6 +24,7 @@
 	"devDependencies": {
 		"@types/express": "^4.17.13",
 		"@types/jest": "^27.4.0",
+		"@types/mongo-sanitize": "^1.0.1",
 		"@types/supertest": "^2.0.11",
 		"jest": "^27.4.7",
 		"mongodb-memory-server": "^8.2.0",
