--- a/brands/package.json
+++ b/brands/package.json
@@ -11,7 +11,9 @@
 	"jest": {
 		"preset": "ts-jest",
 		"testEnvironment": "node",
-		"setupFilesAfterEnv": [ "./src/test/setup.ts" ]
+		"setupFilesAfterEnv": [
+			"./src/test/setup.ts"
+		]
 	},
 	"author": "",
 	"license": "ISC",
@@ -19,11 +21,13 @@
 		"@types/cookie-session": "^2.0.43",
 		"@types/express": "^4.17.13",
 		"@types/jsonwebtoken": "^8.5.8",
+		"@types/mongo-sanitize": "^1.0.1",
 		"cookie-session": "^2.0.0",
 		"express": "^4.17.2",
 		"express-async-errors": "^3.1.1",
 		"express-validator": "^6.12.2",
 		"jsonwebtoken": "^8.5.1",
+		"mongo-sanitize": "^1.1.0",
 		"mongoose": "^6.1.7",
 		"node-nats-streaming": "^0.3.2",
 		"ts-node-dev": "^1.1.8",
