--- a/products/package.json
+++ b/products/package.json
@@ -11,16 +11,19 @@
 	"jest": {
 		"preset": "ts-jest",
 		"testEnvironment": "node",
-		"setupFilesAfterEnv": [ "./src/test/setup.ts" ]
+		"setupFilesAfterEnv": [
+			"./src/test/setup.ts"
+		]
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"@types/cookie-session": "^2.0.43",
+		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/jsonwebtoken": "^8.5.8",
+		"@types/mongo-sanitize": "^1.0.1",
 		"@types/multer": "^1.4.7",
-		"@types/cors": "^2.8.12",
 		"cookie-session": "^2.0.0",
 		"cors": "^2.8.5",
 		"express": "^4.17.2",
@@ -28,6 +31,7 @@
 		"express-validator": "^6.12.2",
 		"file-type": "^16.5.3",
 		"jsonwebtoken": "^8.5.1",
+		"mongo-sanitize": "^1.1.0",
 		"mongoose": "^6.1.7",
 		"multer": "^1.4.4",
 		"node-nats-streaming": "^0.3.2",
