--- a/auth/package.json
+++ b/auth/package.json
@@ -12,6 +12,7 @@
 		"cors": "^2.8.5",
 		"express": "^4.17.2",
 		"express-async-errors": "^3.1.1",
+		"express-rate-limit": "^6.3.0",
 		"express-validator": "^6.12.2",
 		"jsonwebtoken": "^8.5.1",
 		"mongo-sanitize": "^1.1.0",
