--- a/user-ratings/package.json
+++ b/user-ratings/package.json
@@ -25,6 +25,7 @@
 		"cookie-session": "^2.0.0",
 		"express": "^4.17.2",
 		"express-async-errors": "^3.1.1",
+		"express-rate-limit": "^6.3.0",
 		"express-validator": "^6.12.2",
 		"jsonwebtoken": "^8.5.1",
 		"mongo-sanitize": "^1.1.0",
