--- a/auth/package.json
+++ b/auth/package.json
@@ -6,10 +6,12 @@
 	"dependencies": {
 		"@types/cookie-session": "^2.0.43",
 		"@types/cors": "^2.8.12",
+		"@types/csurf": "^1.11.2",
 		"@types/express": "^4.17.13",
 		"@types/jsonwebtoken": "^8.5.8",
 		"cookie-session": "^2.0.0",
 		"cors": "^2.8.5",
+		"csurf": "^1.11.0",
 		"express": "^4.17.2",
 		"express-async-errors": "^3.1.1",
 		"express-rate-limit": "^6.3.0",
