--- a/auth/package.json
+++ b/auth/package.json
@@ -9,6 +9,7 @@
 		"@types/csurf": "^1.11.2",
 		"@types/express": "^4.17.13",
 		"@types/jsonwebtoken": "^8.5.8",
+		"@types/mongo-sanitize": "^1.0.1",
 		"cookie-session": "^2.0.0",
 		"cors": "^2.8.5",
 		"csurf": "^1.11.0",
@@ -27,7 +28,6 @@
 	"devDependencies": {
 		"@types/express": "^4.17.13",
 		"@types/jest": "^27.4.0",
-		"@types/mongo-sanitize": "^1.0.1",
 		"@types/supertest": "^2.0.11",
 		"jest": "^27.4.7",
 		"mongodb-memory-server": "^8.2.0",
@@ -42,9 +42,7 @@
 	"jest": {
 		"preset": "ts-jest",
 		"testEnvironment": "node",
-		"setupFilesAfterEnv": [
-			"./src/test/setup.ts"
-		]
+		"setupFilesAfterEnv": [ "./src/test/setup.ts" ]
 	},
 	"author": "",
 	"license": "ISC"
