--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,12 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.3.1",
+		"react-ratings-declarative": "^3.4.1",
 		"react-router-dom": "^6.2.1",
 		"react-scripts": "5.0.0",
+		"serve": "^13.0.2",
 		"web-vitals": "^2.1.4",
-		"yup": "^0.32.11",
-		"serve": "^13.0.2"
+		"yup": "^0.32.11"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -33,10 +34,21 @@
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
-		"extends": [ "react-app", "react-app/jest" ]
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
 	},
 	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	}
 }
