--- a/common/package.json
+++ b/common/package.json
@@ -2,27 +2,28 @@
 	"name": "@adih-toppicks/common",
 	"version": "1.0.0",
 	"main": "./build/index.js",
-	"files": [ "build/**/*" ],
+	"files": [
+		"build/**/*"
+	],
 	"scripts": {
 		"clean": "del build",
 		"build": "npm run clean && tsc",
 		"pub": "npm version patch && npm publish"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "adi haimsohn",
 	"license": "ISC",
-	"devDependencies": {
-		"del-cli": "^4.0.1",
-		"typescript": "^4.4.4"
-	},
 	"dependencies": {
 		"@types/cookie-session": "^2.0.43",
 		"@types/express": "^4.17.13",
 		"@types/jsonwebtoken": "^8.5.8",
+		"@types/node": "^18.6.3",
 		"cookie-session": "^2.0.0",
 		"express": "^4.17.2",
 		"express-validator": "^6.12.2",
 		"jsonwebtoken": "^8.5.1",
+		"node-nats-streaming": "^0.3.2",
+		"ts-node-dev": "^1.1.8",
 		"typescript": "^4.5.5"
 	},
 	"description": ""
