--- a/products/package.json
+++ b/products/package.json
@@ -18,6 +18,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@adih-toppicks/common": "^1.0.6",
 		"@types/cookie-session": "^2.0.43",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
