--- a/auth/package.json
+++ b/auth/package.json
@@ -23,7 +23,8 @@
 		"mongoose": "^6.1.7",
 		"node-nats-streaming": "^0.3.2",
 		"serve": "^13.0.2",
-		"ts-node-dev": "^1.1.8",
+		"ts-node": "^10.9.1",
+		"ts-node-dev": "^2.0.0-0",
 		"typescript": "^4.5.5"
 	},
 	"devDependencies": {
@@ -43,9 +44,7 @@
 	"jest": {
 		"preset": "ts-jest",
 		"testEnvironment": "node",
-		"setupFilesAfterEnv": [
-			"./src/test/setup.ts"
-		]
+		"setupFilesAfterEnv": [ "./src/test/setup.ts" ]
 	},
 	"author": "",
 	"license": "ISC"
