--- a/lists/package.json
+++ b/lists/package.json
@@ -11,9 +11,7 @@
 	"jest": {
 		"preset": "ts-jest",
 		"testEnvironment": "node",
-		"setupFilesAfterEnv": [
-			"./src/test/setup.ts"
-		]
+		"setupFilesAfterEnv": [ "./src/test/setup.ts" ]
 	},
 	"author": "",
 	"license": "ISC",
@@ -34,7 +32,8 @@
 		"mongo-sanitize": "^1.1.0",
 		"mongoose": "^6.1.7",
 		"node-nats-streaming": "^0.3.2",
-		"ts-node-dev": "^1.1.8",
+		"ts-node": "^10.9.1",
+		"ts-node-dev": "^2.0.0-0",
 		"typescript": "^4.5.5"
 	},
 	"devDependencies": {
@@ -49,8 +48,6 @@
 		"ts-jest": "^27.1.3"
 	},
 	"compilerOptions": {
-		"types": [
-			"node"
-		]
+		"types": [ "node" ]
 	}
 }
