--- a/auth/package.json
+++ b/auth/package.json
@@ -25,7 +25,8 @@
 		"serve": "^13.0.2",
 		"ts-node": "^10.9.1",
 		"ts-node-dev": "^2.0.0-0",
-		"typescript": "^4.5.5"
+		"typescript": "^4.5.5",
+		"minimist": ">=1.2.6"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.13",
