--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,12 @@
 		"react-scripts": "5.0.0",
 		"serve": "^13.0.2",
 		"web-vitals": "^2.1.4",
-		"yup": "^0.32.11"
+		"yup": "^0.32.11",
+		"minimist": ">=1.2.6",
+		"async": ">=2.6.4",
+		"ejs": ">=3.1.7",
+		"node-forge": ">=1.3.0",
+		"nth-check": ">=2.0.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -34,21 +39,10 @@
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
+		"extends": [ "react-app", "react-app/jest" ]
 	},
 	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+		"production": [ ">0.2%", "not dead", "not op_mini all" ],
+		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
 	}
 }
