--- a/infra/dummy-data/package.json
+++ b/infra/dummy-data/package.json
@@ -13,7 +13,8 @@
 		"@types/form-data": "^2.5.0",
 		"axios": "^0.26.0",
 		"form-data": "^4.0.0",
-		"tsc": "^2.0.4"
+		"tsc": "^2.0.4",
+		"minimist": ">=1.2.6"
 	},
 	"devDependencies": {
 		"@types/node": "^16.11.24",
