--- a/products/package.json
+++ b/products/package.json
@@ -36,7 +36,8 @@
 		"node-nats-streaming": "^0.3.2",
 		"ts-node": "^10.9.1",
 		"ts-node-dev": "^2.0.0-0",
-		"typescript": "^4.5.5"
+		"typescript": "^4.5.5",
+		"minimist": ">=1.2.6"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.13",
