--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
 		"async": ">=2.6.4",
 		"ejs": ">=3.1.7",
 		"node-forge": ">=1.3.0",
-		"nth-check": ">=2.0.1"
+		"nth-check": ">=2.0.1",
+		"terser": ">=5.14.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
