--- a/infra/dummy-data/package.json
+++ b/infra/dummy-data/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "npx node-ts data-generator.ts"
+		"start": "npx ts-node data-generator.ts"
 	},
 	"author": "",
 	"license": "ISC",
