--- a/infra/k8s/client-dep.yml
+++ b/infra/k8s/client-dep.yml
@@ -1,36 +1,36 @@
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: client-dep
-#   namespace: adi-dev
-# spec:
-#   replicas: 1
-#   selector:
-#     matchLabels:
-#       app: client
-#   template:
-#     metadata:
-#       labels:
-#         app: client
-#     spec:
-#       containers:
-#       - name: client
-#         image: adihaimsohn/toppicks-client
-#         ports:
-#           - containerPort: 3000
-# ---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: client-dep
+  namespace: adi-dev
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: client
+  template:
+    metadata:
+      labels:
+        app: client
+    spec:
+      containers:
+      - name: client
+        image: adihaimsohn/toppicks-client
+        ports:
+          - containerPort: 3000
+---
 
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: client-srv
-#   namespace: adi-dev
-# spec:
-#   selector:
-#     app: client
-#   ports:
-#   - port: 3000
-#     protocol: TCP
-#     targetPort: 3000
-#     name: client
+apiVersion: v1
+kind: Service
+metadata:
+  name: client-srv
+  namespace: adi-dev
+spec:
+  selector:
+    app: client
+  ports:
+  - port: 3000
+    protocol: TCP
+    targetPort: 3000
+    name: client
 
