--- a/user-ratings/package.json
+++ b/user-ratings/package.json
@@ -11,7 +11,9 @@
 	"jest": {
 		"preset": "ts-jest",
 		"testEnvironment": "node",
-		"setupFilesAfterEnv": [ "./src/test/setup.ts" ]
+		"setupFilesAfterEnv": [
+			"./src/test/setup.ts"
+		]
 	},
 	"author": "",
 	"license": "ISC",
@@ -29,13 +31,13 @@
 		"express-rate-limit": "^6.3.0",
 		"express-validator": "^6.12.2",
 		"jsonwebtoken": "^8.5.1",
+		"minimist": ">=1.2.6",
 		"mongo-sanitize": "^1.1.0",
-		"mongoose": "^6.1.7",
+		"mongoose": "^6.0.7",
 		"node-nats-streaming": "^0.3.2",
 		"ts-node": "^10.9.1",
 		"ts-node-dev": "^2.0.0-0",
-		"typescript": "^4.5.5",
-		"minimist": ">=1.2.6"
+		"typescript": "^4.5.5"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.13",
