--- a/auth/package.json
+++ b/auth/package.json
@@ -16,17 +16,17 @@
 		"csurf": "^1.11.0",
 		"express": "^4.17.2",
 		"express-async-errors": "^3.1.1",
-		"express-rate-limit": "^6.3.0",
+		"express-rate-limit": "^6.6.0",
 		"express-validator": "^6.12.2",
 		"jsonwebtoken": "^8.5.1",
+		"minimist": ">=1.2.6",
 		"mongo-sanitize": "^1.1.0",
 		"mongoose": "^6.1.7",
 		"node-nats-streaming": "^0.3.2",
 		"serve": "^13.0.2",
 		"ts-node": "^10.9.1",
 		"ts-node-dev": "^2.0.0-0",
-		"typescript": "^4.5.5",
-		"minimist": ">=1.2.6"
+		"typescript": "^4.5.5"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.13",
@@ -45,7 +45,9 @@
 	"jest": {
 		"preset": "ts-jest",
 		"testEnvironment": "node",
-		"setupFilesAfterEnv": [ "./src/test/setup.ts" ]
+		"setupFilesAfterEnv": [
+			"./src/test/setup.ts"
+		]
 	},
 	"author": "",
 	"license": "ISC"
