updated dummy-data for multiple product types

--- a/infra/dummy-data/package.json
+++ b/infra/dummy-data/package.json
@@ -4,6 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"build": "tsc --build",
+		"clean": "tsc --build --clean",
 		"start": "npx ts-node data-generator.ts"
 	},
 	"author": "",
