--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,7 @@
 		"terser": ">=5.14.2"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "set HTTPS=true&&react-scripts start",
 		"build": "react-scripts --max_old_space_size=4096 build -v",
 		"test": "react-scripts test",
 		"deploy": "npm run build && serve -s build",
